erDiagram
    USERS ||--o{ COMPLAINTS : submits
    USERS ||--o{ COMPLAINT_COMMENTS : writes
    USERS ||--o{ COMPLAINT_TIMELINE : performs
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ AUDIT_LOGS : creates
    USERS ||--o{ EMAIL_NOTIFICATIONS : receives
    USERS }o--|| DEPARTMENTS : belongs_to
    COMPLAINTS }o--|| DEPARTMENTS : routed_to
    COMPLAINTS }o--o| USERS : assigned_to
    COMPLAINTS ||--o{ COMPLAINT_ATTACHMENTS : contains
    COMPLAINTS ||--o{ COMPLAINT_COMMENTS : has
    COMPLAINTS ||--o{ COMPLAINT_TIMELINE : tracks
    COMPLAINTS ||--o{ NOTIFICATIONS : triggers
    COMPLAINTS ||--o{ COMPLAINT_ESCALATIONS : escalates
    COMPLAINTS ||--o{ EMAIL_NOTIFICATIONS : triggers
    SLA_POLICIES ||--o{ COMPLAINTS : governs
    USERS {
      int id PK
      string full_name
      string email UK
      string role
      int department_id FK
      datetime last_login_at
    }
    COMPLAINTS {
      int id PK
      string reference_no UK
      int user_id FK
      int department_id FK
      int officer_id FK
      string priority
      string status
      boolean is_anonymous
      datetime sla_due_at
      int feedback_rating
    }
    DEPARTMENTS { int id PK string name }
    AUDIT_LOGS { bigint id PK string action string entity_type bigint entity_id }
    SLA_POLICIES { int id PK string priority int resolution_hours }
    COMPLAINT_ESCALATIONS { bigint id PK int complaint_id FK string reason }
    EMAIL_NOTIFICATIONS { bigint id PK string recipient string status }
